--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,1 +1,14 @@
-<h1>Login</h1>
+<div class="container w-75  mx-auto">
+  <h2 class="fs-1 mb-3">Login</h1>
+  <form action="/login" method="post">
+    <div class="form-floating mb-3">
+      <input type="email" class="form-control" name="email" id="floatingInput" placeholder="name@example.com">
+      <label for="floatingInput">Email address</label>
+    </div>
+    <div class="form-floating">
+      <input type="password" class="form-control" name="password" id="floatingPassword" placeholder="Password">
+      <label for="floatingPassword">Password</label>
+    </div>
+    <button type="submit" class="mt-3 btn btn-primary">Login</button>
+  </form>
+</div>
