--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,1 +1,24 @@
-<h1>Register</h1>
+<div class="container w-75  mx-auto">
+  <h2 class="fs-1 mb-3">Register</h1>
+    <form action="/register" method="post">
+      <div class="d-flex gap-3">
+        <div class="form-floating mb-3 w-50">
+          <input type="text" class="form-control" name="firstname" id="floatingFirstName" placeholder="First Name">
+          <label for="floatingInput">First Name</label>
+        </div>
+        <div class="form-floating w-50">
+          <input type="text" class="form-control" name="lastname" id="floatingLastName" placeholder="Last Name">
+          <label for="floatingPassword">Last Name</label>
+        </div>
+      </div>
+      <div class="form-floating mb-3">
+        <input type="email" class="form-control" name="email" id="floatingInput" placeholder="name@example.com">
+        <label for="floatingInput">Email address</label>
+      </div>
+      <div class="form-floating">
+        <input type="password" class="form-control" name="password" id="floatingPassword" placeholder="Password">
+        <label for="floatingPassword">Password</label>
+      </div>
+      <button type="submit" class="mt-3 btn btn-primary">Register</button>
+    </form>
+</div>
